--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/lodash": "^4.14.157",
+    "@types/moment": "^2.13.0",
     "antd": "^4.4.2",
     "axios": "^0.19.2",
     "i18next": "^19.6.2",
+    "lodash": "^4.17.19",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.7",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.7.0",
